--- a/src/main/resources/properties/application-local.properties
+++ b/src/main/resources/properties/application-local.properties
@@ -3,11 +3,12 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@10.201.32.12:1521:gbslcvd
 spring.datasource.username=GBSLCVAPL1
 spring.datasource.password=GBSLCVD#2017
-spring.datasource.connection.timeout=5000
-spring.datasource.maximumPoolSize=2
+spring.datasource.connection.timeout=10000
+spring.datasource.maximumPoolSize=6
 spring.datasource.validation-query=SELECT 1 FROM DUAL
 
 #long time DATASOURCE
+spring.long.datasource.maximumPoolSize=1
 spring.long.datasource.connection.timeout=30000
 
 # crystal report db info
