Billing Type Confirm Url 추가 by 유명현

--- a/src/main/resources/properties/application-prd.properties
+++ b/src/main/resources/properties/application-prd.properties
@@ -71,3 +71,6 @@ autodebit.file.upload.path=/apps/domains/SalesDmain/servers/eTRUST/resources/Web
 
 #Payment - Auto Debit Email Receiver
 autodebit.email.receiver=autodebit@coway.com.my
+
+#Payment - Billing Type Confirm Url
+billing.type.confirm.url=http://etrust.my.coway.com/payment/initBillGroupManagement.do
