Billing Type Confirm Url 추가 by 유명현

--- a/src/main/resources/properties/application-dev.properties
+++ b/src/main/resources/properties/application-dev.properties
@@ -71,3 +71,6 @@ autodebit.file.upload.path=/was/domains/SalesDmain/servers/eTRUST/resources/WebS
 
 #Payment - Auto Debit Email Receiver
 autodebit.email.receiver=t1702011@partner.coway.co.kr
+
+#Payment - Billing Type Confirm Url
+billing.type.confirm.url=http://etrustdev.my.coway.com/payment/initbillGroupMngEstmConfirm.do
