--- a/src/main/resources/properties/application-local.properties
+++ b/src/main/resources/properties/application-local.properties
@@ -85,3 +85,6 @@ autodebit.file.upload.path=C:/works/workspace/etrust/src/main/webapp/resources/W
 
 #Payment - Auto Debit Email Receiver
 autodebit.email.receiver=t1706042@partner.coway.co.kr
+
+#Payment - Billing Type Confirm Url
+billing.type.confirm.url=http://etrustdev.my.coway.com/payment/initbillGroupMngEstmConfirm.do
