-  email confirm 관련 설정 추가.

--- a/src/main/resources/properties/application-local.properties
+++ b/src/main/resources/properties/application-local.properties
@@ -87,4 +87,4 @@ autodebit.file.upload.path=C:/works/workspace/etrust/src/main/webapp/resources/W
 autodebit.email.receiver=t1706042@partner.coway.co.kr
 
 #Payment - Billing Type Confirm Url
-billing.type.confirm.url=http://etrustdev.my.coway.com/payment/initbillGroupMngEstmConfirm.do
+billing.type.confirm.url=http://localhost:8180/payment/initbillGroupMngEstmConfirm.do
