- ctos soap 통신 url 프로퍼티화.

--- a/src/main/resources/properties/application-dev.properties
+++ b/src/main/resources/properties/application-dev.properties
@@ -20,8 +20,8 @@ report.datasource.password=GBSLCVD#2017
 report.file.path=/web/eTRUST/resources/report/dev
 
 # application
-
-app.name=eTRUST-local
+app.name=eTRUST-dev
+ctos.soap.proxy.address=http://uat.cmctos.com.my:8080/ctos/Proxy?wsdl
 
 # common
 com.file.upload.path=/was/domains/SalesDmain/servers/eTRUST/resources/WebShare
