--- a/src/main/resources/properties/application-prd.properties
+++ b/src/main/resources/properties/application-prd.properties
@@ -20,8 +20,11 @@ report.datasource.password=GBSLCVD#2017#
 report.file.path=/apps/apache/htdocs/resources/report/prd
 
 # application
-
 app.name=eTRUST-prd
+#\uC6B4\uC601
+#ctos.soap.proxy.address=http://enq.cmctos.com.my:8080/ctos/Proxy?wsdl
+#\uAC1C\uBC1C
+ctos.soap.proxy.address=http://uat.cmctos.com.my:8080/ctos/Proxy?wsdl
 
 # common
 com.file.upload.path=/apps/domains/SalesDmain/servers/eTRUST/resources/WebShare
@@ -60,7 +63,7 @@ ehcache.diskStore=java.io.tmpdir
 #batch jar folder
 batch.jar.dir=/apps/domains/SalesDmain/servers/eTRUST_BAT
 
-#resource \uc811\uadfc \uac00\ub2a5 \ud30c\uc77c \uacbd\ub85c.
+#resource \uC811\uADFC \uAC00\uB2A5 \uD30C\uC77C \uACBD\uB85C.
 web.resource.upload.file=/apps/apache/htdocs/resources/WebShare
 
 #Payment - Auto Debit File Path
