--- a/src/main/resources/properties/application-prd.properties
+++ b/src/main/resources/properties/application-prd.properties
@@ -22,9 +22,9 @@ report.file.path=/apps/apache/htdocs/resources/report/prd
 # application
 app.name=eTRUST-prd
 #\uC6B4\uC601
-#ctos.soap.proxy.address=http://enq.cmctos.com.my:8080/ctos/Proxy?wsdl
+ctos.soap.proxy.address=http://enq.cmctos.com.my:8080/ctos/Proxy?wsdl
 #\uAC1C\uBC1C
-ctos.soap.proxy.address=http://uat.cmctos.com.my:8080/ctos/Proxy?wsdl
+#ctos.soap.proxy.address=http://uat.cmctos.com.my:8080/ctos/Proxy?wsdl
 
 # common
 com.file.upload.path=/apps/domains/SalesDmain/servers/eTRUST/resources/WebShare
