sms call 수정. restTemplate -> jersey client

--- a/pom.xml
+++ b/pom.xml
@@ -479,6 +479,12 @@
 
 		<!-- soap -->
 
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.19</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
