임시 리포트 테스트 입니다 . 업데이트 받지 마세요 !!!!!

--- a/src/main/resources/properties/application-dev.properties
+++ b/src/main/resources/properties/application-dev.properties
@@ -11,10 +11,21 @@ spring.datasource.validation-query=SELECT 1 FROM DUAL
 spring.long.datasource.connection.timeout=30000
 
 # crystal report db info
+# report.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# report.datasource.url=jdbc:oracle:thin:@10.201.32.12:1521:gbslcvd
+# report.datasource.username=GBSLCVAPL1
+# report.datasource.password=GBSLCVD#2017
+
+
+# crystal report db info new TEST  \uc784\uc2dc  by hgham 2018-03-21
 report.datasource.driver-class-name=oracle.jdbc.OracleDriver
-report.datasource.url=jdbc:oracle:thin:@10.201.32.12:1521:gbslcvd
+report.datasource.url=jdbc:oracle:thin:@10.201.32.216:1521:gbslcvd
 report.datasource.username=GBSLCVAPL1
-report.datasource.password=GBSLCVD#2017
+report.datasource.password=GBSLCVD#2017#
+
+
+
+
 
 # crystal report file path
 report.file.path=/web/eTRUST/resources/report/dev
